[gd_scene load_steps=12 format=3 uid="uid://d2r23wbfg0p8k"]

[ext_resource type="Texture2D" uid="uid://d0xpxrtvmeqne" path="res://Assets/Sprites/student_id.png" id="1_1leoy"]
[ext_resource type="Script" uid="uid://716lyreksvpy" path="res://Scripts/student_id.gd" id="1_sgl21"]
[ext_resource type="FontFile" uid="uid://2bpgap7mit3p" path="res://Assets/Fonts/Minecraftia-Regular.ttf" id="2_wt25s"]
[ext_resource type="FontFile" uid="uid://cwy1ws1immec6" path="res://Assets/Fonts/CoveredByYourGrace-Regular.ttf" id="3_g8tnp"]
[ext_resource type="FontFile" uid="uid://dy54cuo4rbn8a" path="res://Assets/Fonts/WindSong-Medium.ttf" id="4_sgl21"]
[ext_resource type="FontFile" uid="uid://csst3yoqdnyvm" path="res://Assets/Fonts/ByteBounce.ttf" id="5_y0fc1"]
[ext_resource type="Texture2D" uid="uid://bhjgpugjg5rls" path="res://Assets/Sprites/student_id_round_stamp.png" id="6_kxmqv"]
[ext_resource type="Shader" uid="uid://mvcthl1i5nuk" path="res://Shaders/sepia.gdshader" id="8_y0fc1"]
[ext_resource type="Texture2D" uid="uid://b164d3d1cjr44" path="res://Assets/Sprites/UIElements/magnify_instruction.png" id="9_kxmqv"]
[ext_resource type="AudioStream" uid="uid://cjalxpmb33ke2" path="res://Assets/SFX/button.wav" id="10_ojrje"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y0fc1"]
shader = ExtResource("8_y0fc1")

[node name="StudentID" type="Node2D"]
script = ExtResource("1_sgl21")

[node name="StudentIDTexture" type="TextureRect" parent="."]
anchors_preset = -1
anchor_left = -0.109375
anchor_top = -0.124074
anchor_right = 0.109375
anchor_bottom = 0.125926
offset_left = -105.0
offset_top = -67.0
offset_right = 105.0
offset_bottom = 68.0
texture = ExtResource("1_1leoy")

[node name="PhotoBase" type="Polygon2D" parent="."]
position = Vector2(27, 15)
scale = Vector2(1.21622, 1.16667)
color = Color(0.847167, 0.85, 0.816, 1)
polygon = PackedVector2Array(-93.733, -53.9999, -93.733, -23.1428, -72.3553, -23.1428, -72.3553, -53.9999)

[node name="LegitymacjaStudencka" type="Label" parent="."]
anchors_preset = -1
anchor_left = -0.05
anchor_top = -0.0888889
anchor_right = -0.0102446
anchor_bottom = -0.0559937
offset_left = -48.0
offset_top = -53.0
offset_right = 208.0
offset_bottom = 62.0
rotation = 0.0134103
scale = Vector2(0.15, 0.15)
theme_override_colors/font_color = Color(0.152941, 0.105882, 0.0392157, 1)
theme_override_colors/font_outline_color = Color(0.152941, 0.105882, 0.0392157, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "LEGITYMACJA
STUDENCKA"

[node name="NrAlbumu" type="Label" parent="."]
anchors_preset = -1
anchor_left = -0.0375
anchor_top = -0.0444444
anchor_right = -0.025
anchor_bottom = -0.0386111
offset_left = -29.0
offset_top = -25.0
offset_right = 42.0
offset_bottom = -4.0
scale = Vector2(0.15, 0.15)
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.54902)
theme_override_colors/font_outline_color = Color(0.152941, 0.105882, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 12
text = "Nr albumu"
metadata/_edit_use_anchors_ = true

[node name="Podpis" type="Label" parent="."]
anchors_preset = -1
anchor_left = -0.071875
anchor_top = 0.012963
anchor_right = -0.0360937
anchor_bottom = 0.0187963
offset_left = -65.0
offset_top = 8.0
offset_right = 164.0
offset_bottom = 29.0
scale = Vector2(0.15, 0.15)
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.54902)
theme_override_colors/font_outline_color = Color(0.152941, 0.105882, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 12
text = "(podpis właściciela legitymacji)"
metadata/_edit_use_anchors_ = true

[node name="ImieNazwisko" type="Label" parent="."]
anchors_preset = -1
anchor_left = -0.0625
anchor_top = 0.0314815
anchor_right = -0.0267187
anchor_bottom = 0.0373148
offset_left = -58.0
offset_top = 20.0
offset_right = 136.65
offset_bottom = 41.0
scale = Vector2(0.15, 0.15)
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.54902)
theme_override_colors/font_outline_color = Color(0.152941, 0.105882, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 12
text = "(imię i nazwisko)"
metadata/_edit_use_anchors_ = true

[node name="PodluznaPieczec" type="Label" parent="."]
anchors_preset = -1
anchor_left = -0.0552083
anchor_top = 0.0814815
anchor_right = -0.0194271
anchor_bottom = 0.0873148
offset_left = -64.0
offset_top = 44.0
offset_right = 130.65
offset_bottom = 65.0
scale = Vector2(0.15, 0.15)
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.54902)
theme_override_colors/font_outline_color = Color(0.152941, 0.105882, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 12
text = "podłużna pieczęć szkoły"
metadata/_edit_use_anchors_ = true

[node name="DataMiejsce" type="Label" parent="."]
anchors_preset = -1
anchor_left = -0.084375
anchor_top = 0.1
anchor_right = -0.0164062
anchor_bottom = 0.105833
offset_left = -89.0
offset_top = 27.0
offset_right = 346.0
offset_bottom = 62.0
scale = Vector2(0.15, 0.15)
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.54902)
theme_override_colors/font_outline_color = Color(0.152941, 0.105882, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 20
text = "Data  i  miejsce  wydania"
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = -1
anchor_left = 0.0177083
anchor_top = -0.0277778
anchor_right = 0.0864583
anchor_bottom = 0.100815
offset_left = 15.0
offset_top = -24.0
offset_right = 963.0
offset_bottom = 954.0
scale = Vector2(0.08, 0.08)
theme_override_constants/h_separation = 97
theme_override_constants/v_separation = 9
columns = 4

[node name="Date1" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
marca

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date2" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
paźdz.

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date3" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
marca

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date4" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
paźdz.

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date5" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
marca

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date6" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
paźdz.

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date7" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
marca

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date8" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
paźdz.

............. r.

pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date9" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
marca

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date10" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
paźdz.

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date11" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
marca

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Date12" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.10375, 0.039, 0.729412)
theme_override_colors/font_outline_color = Color(0.147848, 0.101936, 0.036936, 1)
theme_override_constants/paragraph_spacing = -19
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_wt25s")
theme_override_font_sizes/font_size = 32
text = "31
paźdz.

............. r.


pieczęć
okrągła
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="AlbumNumber" type="Label" parent="."]
offset_left = -30.0
offset_top = -34.0
offset_right = 214.0
offset_bottom = 12.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "56514"

[node name="Signature" type="Label" parent="."]
offset_left = -73.0
offset_top = -1.0
offset_right = 171.0
offset_bottom = 45.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("4_sgl21")
theme_override_font_sizes/font_size = 32
text = "JanKowalski"

[node name="Name" type="Label" parent="."]
offset_left = -65.0
offset_top = 11.0
offset_right = 179.0
offset_bottom = 57.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "Jan Kowalski"

[node name="Stamp" type="Label" parent="."]
offset_left = -78.0
offset_top = 34.0
offset_right = 211.0
offset_bottom = 111.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.74, 0.1628, 0.32634, 0.556863)
theme_override_fonts/font = ExtResource("5_y0fc1")
theme_override_font_sizes/font_size = 16
text = "Uniwersytet Marii Curie-Skłodowskiej
Wydział Humanistyczny
20-031 Lublin Pl.Marii Curie-Skłodowskiej 4
tel. 81 121 34 00 fax 81 121 34 03
"
horizontal_alignment = 1

[node name="Date" type="Label" parent="."]
offset_left = -40.0
offset_top = 23.0
offset_right = 206.0
offset_bottom = 69.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "Lbn 01.09.94r."

[node name="Stamp1" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(23, -12)
texture = ExtResource("6_kxmqv")

[node name="Stamp2" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(41, -12)
texture = ExtResource("6_kxmqv")

[node name="Stamp3" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(61, -13)
texture = ExtResource("6_kxmqv")

[node name="Stamp4" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(82, -11)
texture = ExtResource("6_kxmqv")

[node name="Stamp5" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(22, 13)
texture = ExtResource("6_kxmqv")

[node name="Stamp6" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(40, 15)
texture = ExtResource("6_kxmqv")

[node name="Stamp7" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(61, 13)
texture = ExtResource("6_kxmqv")

[node name="Stamp8" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(81, 14)
texture = ExtResource("6_kxmqv")

[node name="Stamp9" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(22, 41)
texture = ExtResource("6_kxmqv")

[node name="Stamp10" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(41, 41)
texture = ExtResource("6_kxmqv")

[node name="Stamp11" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.392157)
position = Vector2(62, 41)
texture = ExtResource("6_kxmqv")

[node name="Year1" type="Label" parent="."]
offset_left = 18.0
offset_top = -18.0
offset_right = 48.0
offset_bottom = 28.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "94"
metadata/_edit_use_anchors_ = true

[node name="Year2" type="Label" parent="."]
offset_left = 38.0
offset_top = -18.0
offset_right = 68.0
offset_bottom = 28.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "94"
metadata/_edit_use_anchors_ = true

[node name="Year3" type="Label" parent="."]
offset_left = 58.0
offset_top = -18.0
offset_right = 88.0
offset_bottom = 28.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "95"
metadata/_edit_use_anchors_ = true

[node name="Year4" type="Label" parent="."]
offset_left = 79.0
offset_top = -18.0
offset_right = 109.0
offset_bottom = 28.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "95"
metadata/_edit_use_anchors_ = true

[node name="Year5" type="Label" parent="."]
offset_left = 18.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 54.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "96"
metadata/_edit_use_anchors_ = true

[node name="Year6" type="Label" parent="."]
offset_left = 38.0
offset_top = 8.0
offset_right = 68.0
offset_bottom = 54.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "96"
metadata/_edit_use_anchors_ = true

[node name="Year7" type="Label" parent="."]
offset_left = 58.0
offset_top = 8.0
offset_right = 88.0
offset_bottom = 54.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "97"
metadata/_edit_use_anchors_ = true

[node name="Year8" type="Label" parent="."]
offset_left = 78.0
offset_top = 9.0
offset_right = 108.0
offset_bottom = 55.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "97"
metadata/_edit_use_anchors_ = true

[node name="Year9" type="Label" parent="."]
offset_left = 18.0
offset_top = 35.0
offset_right = 48.0
offset_bottom = 81.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "98"
metadata/_edit_use_anchors_ = true

[node name="Year10" type="Label" parent="."]
offset_left = 38.0
offset_top = 35.0
offset_right = 68.0
offset_bottom = 81.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "98"
metadata/_edit_use_anchors_ = true

[node name="Year11" type="Label" parent="."]
offset_left = 59.0
offset_top = 36.0
offset_right = 89.0
offset_bottom = 82.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.175695, 0.000100112, 0.572508, 1)
theme_override_fonts/font = ExtResource("3_g8tnp")
theme_override_font_sizes/font_size = 32
text = "99"
metadata/_edit_use_anchors_ = true

[node name="PhotoCont" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_y0fc1")
offset_left = -92.0
offset_top = -45.0
offset_right = 36.0
offset_bottom = 83.0
scale = Vector2(0.8, 0.8)

[node name="Photo" type="SubViewport" parent="PhotoCont"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(40, 42)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Orzelek" type="Sprite2D" parent="."]
modulate = Color(1, 0.54, 0.54, 0.47451)
position = Vector2(-57, -12)
texture = ExtResource("6_kxmqv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -98.0
offset_top = -62.0
offset_right = 103.0
offset_bottom = 66.0

[node name="MagnifyInstruction" type="TextureRect" parent="."]
visible = false
offset_left = -24.0
offset_top = -94.0
offset_right = 28.0
offset_bottom = -54.0
scale = Vector2(0.938, 0.75)
texture = ExtResource("9_kxmqv")

[node name="ButtonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ojrje")

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
